# konsole-plus

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
completions/: konsole.zsh
data/: data.qrc
desktop/: CMakeLists.txt  konsole-plus-run.desktop  konsole-plus.notifyrc  konsole-plusui.rc  konsole.qrc  konsolepart.desktop  konsolerun.desktop  org.kde.konsole-plus.appdata.xml  org.kde.konsole-plus.desktop  org.kde.konsole.desktop
doc/manual/: CMakeLists.txt
src/: BookmarkHandler.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  ViewManager.cpp  ViewManager.h  konsolepart.json  main.cpp
src/colorscheme/: ColorSchemeManager.cpp
src/containers/: DistroboxDetector.cpp  ToolboxDetector.cpp
src/history/: HistoryFile.cpp
src/keyboardtranslator/: KeyboardTranslatorManager.cpp
src/plugins/QuickCommands/: CMakeLists.txt  quickcommandsmodel.cpp
src/plugins/SSHManager/: CMakeLists.txt  sshconfigurationdata.h  sshitemdelegate.cpp  sshitemdelegate.h  sshmanagerfiltermodel.cpp  sshmanagerfiltermodel.h  sshmanagermodel.cpp  sshmanagermodel.h  sshmanagerplugin.cpp  sshmanagerplugin.h  sshmanagerpluginwidget.cpp  sshmanagerpluginwidget.h  sshwidget.ui
src/pluginsystem/: IKonsolePlugin.h  PluginManager.cpp
src/profile/: Profile.cpp  ProfileManager.cpp  ProfileReader.cpp  ProfileWriter.cpp
src/session/: SessionController.cpp
src/settings/: konsole.kcfg
src/widgets/: ComposeBarWidget.cpp  ComposeBarWidget.h  DetachableTabBar.cpp  DetachableTabBar.h  EditProfileDialog.cpp  PaneSplitter.cpp  PaneSplitter.h  TabManagerWidget.cpp  TabManagerWidget.h  ViewContainer.cpp  ViewContainer.h  ViewSplitter.cpp  ViewSplitter.h
tools/: CMakeLists.txt
